fix masonry alignment

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -223,7 +223,9 @@ footer {
     }
   }
 }
-
+.grid {
+  margin: 0 auto;
+}
 .grid-item {
   width: 200px;
   img{
